tests/ui/pub/pub-ident-struct-with-lifetime.rs
pub S<'a> {
//~^ ERROR missing `struct` for struct definition
}
fn main() {}
